# ernest-oracle

./: Cargo.toml  justfile  vectors.json
.sqlx/: query-2f3296d9ef2c54e68b917511aca60e512637dee9c1dccfa1f1b5c150de35e6f8.json  query-392a4981413874e3242ce3a150621897a39d02d0d6fe577e94d0b003254cd08b.json  query-5e61af6db1d1090ecf1a86d061f5e40a94565d2cf15c280c15dcf2aec6757a48.json  query-6ec3b4b9a4e6aca7ff1e9ca5e66a83411058f54df4a24e58d8374e4ddb73771d.json  query-8408ac37771cd68bd24b4079409f09239688629d7bc91dd85003deb9ba9f3cc2.json  query-86420bc16927d45cb75a70ab9f355be281861aa0888718e4bd17b2cdd71779d0.json  query-9bc143fa0b94ccc3a82eda96d61ff9dc9219f4a5cb6a691bde87db7fff0d3245.json  query-a22d8338103e65bd463fd1e92fd429c09f8dd0491809a8fe52e92571d8effd54.json  query-f360f555cf3ce6c5b3ba8cf528c14745fc70ff33e10d9d4e9f3bdfdf5eb533f5.json
migrations/: 20250404182933_init.down.sql  20250404182933_init.sql  20250516194932_add_event_type.sql  20250526134239_floating_point_parameters.down.sql  20250526134239_floating_point_parameters.sql  20250526142717_attestation_information.down.sql  20250526142717_attestation_information.sql
oracle/: Cargo.toml
oracle-client/: Cargo.toml
oracle-client/src/: lib.rs  types.rs
oracle/migrations/: 20250404190130_parlay_contract.down.sql  20250404190130_parlay_contract.sql
oracle/src/: events.rs  lib.rs  main.rs  mempool.rs  oracle.rs  parlay.rs  routes.rs  storage.rs  test_util.rs
src/: attestation.rs  events.rs  lib.rs  main.rs  mempool.rs  oracle.rs  parlay.rs  routes.rs  storage.rs  test_util.rs  watcher.rs
src/parlay/: contract.rs  mod.rs  parameter.rs
