[package]
name = "ernest-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["query"] }
axum-macros = "0.4.2"
bitcoin = { version = "0.32.5", features = ["rand"] }
chrono = "0.4.38"
ddk-messages = "0.7.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
hex = "0.4.3"
kormir = { git = "https://github.com/bennyhodl/kormir", version = "0.3.2", branch = "event-id-as-primary-key"}
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["derive", "json", "macros", "postgres", "runtime-tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
