[package]
name = "ernest-oracle"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.88"
axum = { version = "0.7.9", features = ["macros", "query"] }
axum-macros = "0.4.2"
bitcoin = { version = "0.32.5", features = ["rand"] }
chrono = "0.4.38"
clap = { version = "4.5.37", features = ["derive"] }
ddk = { version = "0.0.18", features = ["postgres", "nostr"] }
ddk-manager = "0.7.6"
# ddk = { version = "0.0.18", git = "https://github.com/bennyhodl/dlcdevkit", branch = "master", features = ["postgres", "nostr"] }
# ddk-manager = { version = "0.7.6", git = "https://github.com/bennyhodl/dlcdevkit", branch = "master" }
# ddk = {path = "../dlcdevkit/ddk"}
# ddk-manager = {path = "../dlcdevkit/ddk-manager"}
dlc-messages = "0.7.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
hex = "0.4.3"
inquire = { version = "0.7.5" }
kormir = "0.4.0"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.133"
sqlx = { version = "0.8.3", features = ["derive", "json", "macros", "postgres", "runtime-tokio"] }
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
wiremock = "0.6.2"

[[bin]]
name = "oracle"
path = "bin/oracle.rs"

[[bin]]
name = "oracle-admin"
path = "bin/admin.rs"
