[package]
name = "ernest-oracle-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bitcoin = "0.32.5"
ddk = { path = "../../dlcdevkit/ddk" }
ddk-manager = { path = "../../dlcdevkit/ddk-manager" }
# ddk = "0.0.17"
# ddk-manager = "0.7.5"
dlc-messages = "0.7.1"
kormir = "0.4.1"
reqwest = "0.12.9"
serde = "1.0.216"
serde_json = "1.0.133"
